k3s/apps/vaultwarden/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-headless
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  ports:
    - port: 80
      name: web
  clusterIP: None
  selector:
    app: vaultwarden
