k3s/apps/vaultwarden/04.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  labels:
    app: code-server
spec:
  ingressClassName: nginx
  rules:
  - host: your.domain.example
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-headless
            port: 
              name: web
